refact: refactor watchingSession service with pair review